2010-09-13  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_dshgroup.m4, configure :
	  Update --with-dshgroups help string to match other
	  configure --help output. Fix missing ','.

	* src/pdsh/mod.h, src/pdsh/mod.c, src/pdsh/opt.c :
	  Don't unload conflicting (uninitialized) modules, instead
	  keep them for -V and -L output, and mark then as conflicting
	  to avoid confusion.

	* src/pdsh/rcmd.c, src/pdsh/opt.c :
	  Fix a couple of compiler warnings.

2010-09-10  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/Makefile.am, src/modules/Makefile.in :
	  Use 'target_la_CPPFLAGS' instead of AM_CPPFLAGS for
	  per-module CPPFLAGS.

	* src/modules/torque.c :
	  Error in pbs_disconnect() shouldn't be fatal.

	* src/modules/torque.c :
	  Fix segfault with no default PBS server.

	* src/modules/torque.c :
	  Minor fixup of some error messages in Torque module.

	* : Re-run ./bootstrap

	* config/ac_torque.m4, configure.ac, doc/pdsh.1.in,
	  pdsh.spec, src/modules/Makefile.am, src/modules/torque.c :
	  Add new Torque/PBS module from Mattias Slabanja.

2010-09-03  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.22.

	* src/pdsh/mod.c :
	  Print an error if requested modules fail to initialize.

	* src/pdsh/mod.c :
	  Delete any uninitialized modules after all modules that can
	  successfully be initialized have been.

	* src/pdsh/mod.c :
	  Sort loaded modules first by priority, then by module name.
	  This will allow modules to be listed and initialized in
	  a reproducible order, instead of an arbitrary order.

	* src/pdsh/opt.c :
	  Move POSIXLY_CORRECT=1 into opt_args_early().

	* src/pdsh/opt.c :
	  Fix error in opt_args() when -M is used.

	* src/pdsh/mod.c :
	  Ensure functions used by list_for_each always return 0
	  so that the list traversal isn't short-circuited by
	  recoverable errors.

	* src/modules/genders.c :
	  Don't let genders_file be NULL. Instead manually set
	  to "/etc/genders" for improved error message, and to