@@ -51,3 +51,29 @@ expect {
 	-re "foo\\\[00-03\\\]"		{ pass "$test" }
 	eof	 			{ fail "$test" }
 }
+
+set test "dshbak: -c does not coalesce different zero padding"
+spawn $dshbak -c
+send "foo0: bar\n"
+send "foo03: bar\n"
+send "foo01: bar\n"
+send "foo2: bar\n"
+send \004
+expect {
+	-re "foo\\\[0,01,2,03\\\]"		{ pass "$test" }
+	eof	 			{ fail "$test" }
+}
+
+set test "dshbak: -c properly coalesces zero padding of '00'"
+spawn $dshbak -c
+send "foo1: bar\n"
+send "foo01: bar\n"
+send "foo02: bar\n"
+send "foo3: bar\n"
+send "foo5: bar\n"
+send "foo00: bar\n"
+send \004
+expect {
+	-re "foo\\\[00-02,1,3,5\\\]"		{ pass "$test" }
+	eof	 			{ fail "$test" }
+}
